# orca-ml

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/processed/: ignore.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 1_GenerateDataEra1.ipynb  1a_GenerateDataEra0.ipynb  1b_GenerateDataEra1.ipynb  2_Train_DownSampledNegModel.ipynb
orca_ml/: __init__.py  config.py  dataset.py  features.py  generate_clip_dataset.py  generate_spectrogram_dataset.py  plots.py  retrieve_detection_metadata.py
orca_ml/modeling/: predict.py  train.py
