[project]
name = "orca-ml"
version = "0.1.0"
description = "Detection of orca calls from underwater microphone recordings"
authors = [
  { name = "Patrick Pastore" },
  { name = "Bruno Grande" },
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12"
dependencies = [
  "mkdocs>=1.6.1",
  "python-dotenv>=1.0.1",
  "torch>=2.5.1",
  "torchvision>=0.20.1",
  "tqdm>=4.67.0",
  "typer>=0.13.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "platform_system == 'Windows'" },
  { index = "pytorch-cu124", marker = "platform_system == 'Linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "platform_system == 'Windows'" },
  { index = "pytorch-cu124", marker = "platform_system == 'Linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "ruff>=0.8.0",
]
